Actualizzación de la semana 3

--- a/Pratica/Practicas/index.html
+++ b/Pratica/Practicas/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="mostrar"></div>
     <script src="./practis.js"></script>
 </body>
 </html>
