--- a/MOODLE_3/Week_3/index.html
+++ b/MOODLE_3/Week_3/index.html
@@ -21,7 +21,7 @@
 
     <hr />
 
-<button id="btn-toggle-update">Mostrar/Ocultar Formulario de Actualización</button>
+<button id="btn-toggle-update">Display</button>
 
 <div id="update-form" style="display: none;">
     <h2>Update Product</h2>
