--- a/Work_Class/challengeSPAs/index.html
+++ b/Work_Class/challengeSPAs/index.html
@@ -25,6 +25,6 @@
         </div>
     </main>
 </div>
-<script type="module" src="challenge_SPAs.js"></script>
+<script type="module" src="challenge_SPAs.js" src="./fix_ids.js"></script>
 </body>
 </html>
