--- a/MOODLE_3/Week_4/index.html
+++ b/MOODLE_3/Week_4/index.html
@@ -26,6 +26,6 @@
     <p class="contador">Interacciones esta sesión: <span id="contador">0</span></p>
 </div>
 
-<script src="app.js"></script>
+<script src="./modificacion_Dom.js"></script>
 </body>
 </html>
