--- a/Work_Class/proyectoPrueba/SPA/index.html
+++ b/Work_Class/proyectoPrueba/SPA/index.html
@@ -11,7 +11,7 @@
     <a href="#login">Login</a>
     <a href="#registro">Registro</a>
     <a href="#home">Home</a>
-    <a href="#productos">Productos</a>
+    <a href="#productos">Administracion</a>
 </nav>
 
     <div id="app"></div>
