--- a/Work_Class/proyectoPrueba/SPA/index.html
+++ b/Work_Class/proyectoPrueba/SPA/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SPA Productos</title>
-    <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SPA con Vite</title>
+  <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
-<nav>
+  <nav>
     <a href="#login">Login</a>
     <a href="#registro">Registro</a>
     <a href="#home">Home</a>
-    <a href="#productos">Administracion</a>
-</nav>
-
-    <div id="app"></div>
-<script type="module" src="app.js"></script>
+    <a href="#productos">Administración</a>
+  </nav>
+  <div id="app"></div>
+  <script type="module" src="/main.js"></script>
 </body>
 </html>
